# workgraph-v4

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bins/workgraph/: Cargo.toml
bins/workgraph/src/: main.rs
crates/wg-adapter-api/: Cargo.toml
crates/wg-adapter-api/src/: lib.rs
crates/wg-adapter-claude/: Cargo.toml
crates/wg-adapter-claude/src/: lib.rs
crates/wg-adapter-cursor/: Cargo.toml
crates/wg-adapter-cursor/src/: lib.rs
crates/wg-adapter-shell/: Cargo.toml
crates/wg-adapter-shell/src/: lib.rs
crates/wg-adapter-webhook/: Cargo.toml
crates/wg-adapter-webhook/src/: lib.rs
crates/wg-api/: Cargo.toml
crates/wg-api/src/: lib.rs
crates/wg-autonomy/: Cargo.toml
crates/wg-autonomy/src/: lib.rs
crates/wg-cli/: Cargo.toml
crates/wg-cli/src/: app.rs  args.rs  lib.rs
crates/wg-cli/src/commands/: actor.rs  brief.rs  capabilities.rs  checkpoint.rs  claim.rs  connect.rs  create.rs  init.rs  invite.rs  ledger.rs  mission.rs  mod.rs  onboard.rs  query.rs  run.rs  schema.rs  serve.rs  show.rs  skills.rs  status.rs  thread.rs  thread_complete.rs  trigger.rs
crates/wg-cli/src/output/: envelope.rs  human.rs  json.rs  mod.rs
crates/wg-cli/src/services/: codec.rs  discovery.rs  mod.rs  mutation.rs  orientation.rs
crates/wg-cli/src/util/: fields.rs  mod.rs  slug.rs  stdin.rs  token.rs  workspace.rs
crates/wg-clock/: Cargo.toml
crates/wg-clock/src/: lib.rs
crates/wg-connector-api/: Cargo.toml
crates/wg-connector-api/src/: lib.rs
crates/wg-connector-github/: Cargo.toml
crates/wg-connector-github/src/: lib.rs
crates/wg-dispatch/: Cargo.toml
crates/wg-dispatch/src/: lib.rs  mutation.rs
crates/wg-encoding/: Cargo.toml
crates/wg-encoding/src/: lib.rs
crates/wg-error/: Cargo.toml
crates/wg-error/src/: lib.rs
crates/wg-federation/: Cargo.toml
crates/wg-federation/src/: lib.rs
crates/wg-fs/: Cargo.toml
crates/wg-fs/src/: lib.rs
crates/wg-graph/: Cargo.toml
crates/wg-graph/src/: build.rs  lib.rs  model.rs
crates/wg-ledger/: Cargo.toml
crates/wg-ledger/src/: hash.rs  lib.rs  model.rs  reader.rs  storage.rs  verify.rs  writer.rs
crates/wg-markdown/: Cargo.toml
crates/wg-markdown/src/: lib.rs
crates/wg-mcp/: Cargo.toml
crates/wg-mcp/src/: lib.rs
crates/wg-mission/: Cargo.toml
crates/wg-mission/src/: lib.rs  mutation.rs
crates/wg-net/: Cargo.toml
crates/wg-net/src/: lib.rs
crates/wg-obsidian/: Cargo.toml
crates/wg-obsidian/src/: lib.rs
crates/wg-orientation/: Cargo.toml
crates/wg-orientation/src/: brief_runtime.rs  lib.rs  mutation.rs  runtime.rs  runtime_support.rs  status_runtime.rs
crates/wg-otel/: Cargo.toml
crates/wg-otel/src/: lib.rs
crates/wg-paths/: Cargo.toml
crates/wg-paths/src/: lib.rs
crates/wg-policy/: Cargo.toml
crates/wg-policy/src/: lib.rs
crates/wg-projections/: Cargo.toml
crates/wg-projections/src/: lib.rs
crates/wg-registry/: Cargo.toml
crates/wg-registry/src/: lib.rs
crates/wg-signal/: Cargo.toml
crates/wg-signal/src/: lib.rs
crates/wg-store/: Cargo.toml
crates/wg-store/src/: document.rs  io.rs  lib.rs  query.rs  registry.rs  validate.rs
crates/wg-thread/: Cargo.toml
crates/wg-thread/src/: codec.rs  lib.rs  mutation.rs  mutation_support.rs  render.rs
crates/wg-transport/: Cargo.toml
crates/wg-transport/src/: lib.rs
crates/wg-trigger/: Cargo.toml
crates/wg-trigger/src/: lib.rs  mutation.rs
crates/wg-types/: Cargo.toml
crates/wg-types/src/: config.rs  coordination.rs  identity.rs  ledger.rs  lib.rs  registry.rs  status.rs  support.rs  tier_one.rs  tier_two.rs
docs/: context-graph.md  cortex-openclaw-platform-plan.md  foundation.md  operating-model.md  roadmap.md
docs/plans/: 2026-04-20-001-refactor-company-context-browsing-plan.md
npm/: install.js  platform.js
src/: lib.rs
tests/: phase0_flow.rs  workgraph_flow.rs
