[package]
name = "workgraph-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[workspace]
resolver = "2"
members = [
    "bins/workgraph",
    "crates/wg-adapter-api",
    "crates/wg-adapter-claude",
    "crates/wg-adapter-cursor",
    "crates/wg-adapter-shell",
    "crates/wg-adapter-webhook",
    "crates/wg-api",
    "crates/wg-autonomy",
    "crates/wg-cli",
    "crates/wg-clock",
    "crates/wg-connector-api",
    "crates/wg-connector-github",
    "crates/wg-dispatch",
    "crates/wg-encoding",
    "crates/wg-error",
    "crates/wg-federation",
    "crates/wg-fs",
    "crates/wg-graph",
    "crates/wg-ledger",
    "crates/wg-markdown",
    "crates/wg-mcp",
    "crates/wg-mission",
    "crates/wg-net",
    "crates/wg-obsidian",
    "crates/wg-orientation",
    "crates/wg-otel",
    "crates/wg-paths",
    "crates/wg-policy",
    "crates/wg-projections",
    "crates/wg-registry",
    "crates/wg-signal",
    "crates/wg-store",
    "crates/wg-thread",
    "crates/wg-transport",
    "crates/wg-trigger",
    "crates/wg-types",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
authors = ["Versatly Holdings"]
description = "Durable context graph, immutable ledger, and coordination CLI for agentic work."
readme = "README.md"
repository = "https://github.com/Versatly/workgraph-v4"
homepage = "https://github.com/Versatly/workgraph-v4"
documentation = "https://github.com/Versatly/workgraph-v4/tree/main/docs"
keywords = ["agents", "cli", "coordination", "ledger", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
glob = "0.3"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio.workspace = true
wg-cli = { path = "crates/wg-cli" }
wg-graph = { path = "crates/wg-graph" }
wg-ledger = { path = "crates/wg-ledger" }
wg-mission = { path = "crates/wg-mission" }
wg-orientation = { path = "crates/wg-orientation" }
wg-paths = { path = "crates/wg-paths" }
wg-policy = { path = "crates/wg-policy" }
wg-store = { path = "crates/wg-store" }
wg-thread = { path = "crates/wg-thread" }
wg-types = { path = "crates/wg-types" }

[profile.release]
lto = true
codegen-units = 1
