[package]
name = "workgraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
wg-cli = { path = "../../crates/wg-cli" }
