[package]
name = "wg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
wg-api = { path = "../wg-api" }
wg-clock = { path = "../wg-clock" }
wg-dispatch = { path = "../wg-dispatch" }
wg-thread = { path = "../wg-thread" }
wg-fs = { path = "../wg-fs" }
wg-ledger = { path = "../wg-ledger" }
wg-orientation = { path = "../wg-orientation" }
wg-paths = { path = "../wg-paths" }
wg-policy = { path = "../wg-policy" }
wg-registry = { path = "../wg-registry" }
wg-store = { path = "../wg-store" }
wg-trigger = { path = "../wg-trigger" }
wg-error = { path = "../wg-error" }
wg-mcp = { path = "../wg-mcp" }
wg-mission = { path = "../wg-mission" }
wg-types = { path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
