[package]
name = "wg-dispatch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
wg-error = { path = "../wg-error" }
wg-paths = { path = "../wg-paths" }
wg-store = { path = "../wg-store" }
wg-types = { path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
