[package]
name = "wg-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde_yaml.workspace = true
tokio.workspace = true
wg-encoding = { version = "0.1.0", path = "../wg-encoding" }
wg-error = { version = "0.1.0", path = "../wg-error" }
wg-fs = { version = "0.1.0", path = "../wg-fs" }
wg-paths = { version = "0.1.0", path = "../wg-paths" }
wg-store = { version = "0.1.0", path = "../wg-store" }
wg-types = { version = "0.1.0", path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
