[package]
name = "wg-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
wg-error = { path = "../wg-error" }
wg-paths = { path = "../wg-paths" }
wg-types = { path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
