[package]
name = "wg-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
wg-clock = { path = "../wg-clock" }
wg-error = { path = "../wg-error" }
wg-fs = { path = "../wg-fs" }
wg-paths = { path = "../wg-paths" }
wg-types = { path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
