[package]
name = "wg-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
wg-clock = { version = "0.1.0", path = "../wg-clock" }
wg-error = { version = "0.1.0", path = "../wg-error" }
wg-fs = { version = "0.1.0", path = "../wg-fs" }
wg-paths = { version = "0.1.0", path = "../wg-paths" }
wg-types = { version = "0.1.0", path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
