[package]
name = "wg-orientation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_yaml.workspace = true
wg-dispatch = { path = "../wg-dispatch" }
wg-error = { path = "../wg-error" }
wg-graph = { path = "../wg-graph" }
wg-ledger = { path = "../wg-ledger" }
wg-mission = { path = "../wg-mission" }
wg-paths = { path = "../wg-paths" }
wg-store = { path = "../wg-store" }
wg-thread = { path = "../wg-thread" }
wg-types = { path = "../wg-types" }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
wg-clock = { path = "../wg-clock" }
