[package]
name = "wg-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
wg-error = { version = "0.1.0", path = "../wg-error" }
wg-paths = { version = "0.1.0", path = "../wg-paths" }
wg-store = { version = "0.1.0", path = "../wg-store" }
wg-types = { version = "0.1.0", path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
