[package]
name = "wg-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
wg-encoding = { path = "../wg-encoding" }
wg-error = { path = "../wg-error" }
wg-fs = { path = "../wg-fs" }
wg-paths = { path = "../wg-paths" }
wg-types = { path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
