[package]
name = "wg-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
wg-clock = { version = "0.1.0", path = "../wg-clock" }
wg-encoding = { version = "0.1.0", path = "../wg-encoding" }
wg-error = { version = "0.1.0", path = "../wg-error" }
wg-fs = { version = "0.1.0", path = "../wg-fs" }
wg-ledger = { version = "0.1.0", path = "../wg-ledger" }
wg-paths = { version = "0.1.0", path = "../wg-paths" }
wg-types = { version = "0.1.0", path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
