[package]
name = "wg-trigger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
wg-error = { version = "0.1.0", path = "../wg-error" }
wg-paths = { version = "0.1.0", path = "../wg-paths" }
wg-policy = { version = "0.1.0", path = "../wg-policy" }
wg-store = { version = "0.1.0", path = "../wg-store" }
wg-types = { version = "0.1.0", path = "../wg-types" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
wg-clock = { version = "0.1.0", path = "../wg-clock" }
wg-ledger = { version = "0.1.0", path = "../wg-ledger" }
